@@ -321,6 +321,8 @@ V2World::V2World(string V2Loc)
 
 	equalityLeft	= 6;
 	libertyLeft		= 30;
+
+	colonies.clear();
 }
 
 
@@ -338,6 +340,28 @@ void V2World::output(FILE* output) const
 		countries[i]->output(output);
 	}
 	diplomacy.output(output);
+	if(Configuration::getV2Gametype() == "HOD")
+	{
+		for (map< int, set<string> >::const_iterator colonyIter = colonies.begin(); colonyIter != colonies.end(); colonyIter++)
+		{
+			fprintf(output, "region=\n");
+			fprintf(output, "{\n");
+			fprintf(output, "	index=%d\n", colonyIter->first);
+			fprintf(output, "	phase=0\n");
+			fprintf(output, "	temperature=0.000\n");
+			for (set<string>::iterator countriesIter = colonyIter->second.begin(); countriesIter != colonyIter->second.end(); countriesIter++)
+			{
+				fprintf(output, "	colony=\n");
+				fprintf(output, "	{\n");
+				fprintf(output, "		tag=\"%s\"\n", countriesIter->c_str());
+				fprintf(output, "		points=1\n");
+				fprintf(output, "		invest=80\n");
+				fprintf(output, "		date=\"1836.1.1\"\n");
+				fprintf(output, "	}\n");
+			}
+			fprintf(output, "}\n");
+		}
+	}
 }
 
 
@@ -695,7 +719,7 @@ struct MTo1ProvinceComp
 };
 
 
-void V2World::convertProvinces(const EU3World& sourceWorld, const provinceMapping& provinceMap, const countryMapping& countryMap, const cultureMapping& cultureMap, const religionMapping& religionMap)
+void V2World::convertProvinces(const EU3World& sourceWorld, const provinceMapping& provinceMap, const countryMapping& countryMap, const cultureMapping& cultureMap, const religionMapping& religionMap, const stateIndexMapping& stateIndexMap)
 {
 	for (vector<V2Province*>::iterator i = provinces.begin(); i != provinces.end(); i++)
 	{
@@ -710,8 +734,8 @@ void V2World::convertProvinces(const EU3World& sourceWorld, const provinceMappin
 			continue;
 		}
 
-		EU3Province* oldProvince	= NULL;
-		EU3Country* oldOwner			= NULL;
+		EU3Province*	oldProvince	= NULL;
+		EU3Country*		oldOwner		= NULL;
 		// determine ownership by province count, or total population (if province count is tied)
 		map<string, MTo1ProvinceComp> provinceBins;
 		double newProvinceTotalPop = 0;
@@ -737,18 +761,45 @@ void V2World::convertProvinces(const EU3World& sourceWorld, const provinceMappin
 			{
 				provinceBins[tag] = MTo1ProvinceComp();
 			}
-			provinceBins[tag].provinces.push_back(province);
-			provinceBins[tag].totalPopulation += province->getPopulation();
-			newProvinceTotalPop += province->getPopulation();
-			// I am the new owner if there is no current owner, or I have more provinces than the current owner,
-			// or I have the same number of provinces, but more population, than the current owner
-			if (	(oldOwner == NULL)
-				|| (provinceBins[tag].provinces.size() > provinceBins[oldOwner->getTag()].provinces.size())
-				|| ((provinceBins[tag].provinces.size() == provinceBins[oldOwner->getTag()].provinces.size())
-					   && (provinceBins[tag].totalPopulation > provinceBins[oldOwner->getTag()].totalPopulation)))
+
+			if ((Configuration::getV2Gametype() == "HOD") && (province->getPopulation() < 1000) && (owner != NULL))
 			{
-				oldOwner = owner;
-				oldProvince = province;
+				stateIndexMapping::const_iterator stateIndexMapping = stateIndexMap.find( (*i)->getNum() );
+				if (stateIndexMapping == stateIndexMap.end())
+				{
+					log("Error: Could not find state index for province %d.\n", (*i)->getNum());
+					continue;
+				}
+				else
+				{
+					map< int, set<string> >::iterator colony = colonies.find(stateIndexMapping->second);
+					if (colony == colonies.end())
+					{
+						set<string> countries;
+						countries.insert(owner->getTag());
+						colonies.insert( make_pair(stateIndexMapping->second, countries) );
+					}
+					else
+					{
+						colony->second.insert(owner->getTag());
+					}
+				}
+			}
+			else
+			{
+				provinceBins[tag].provinces.push_back(province);
+				provinceBins[tag].totalPopulation += province->getPopulation();
+				newProvinceTotalPop += province->getPopulation();
+				// I am the new owner if there is no current owner, or I have more provinces than the current owner,
+				// or I have the same number of provinces, but more population, than the current owner
+				if (	(oldOwner == NULL)
+					|| (provinceBins[tag].provinces.size() > provinceBins[oldOwner->getTag()].provinces.size())
+					|| ((provinceBins[tag].provinces.size() == provinceBins[oldOwner->getTag()].provinces.size())
+							&& (provinceBins[tag].totalPopulation > provinceBins[oldOwner->getTag()].totalPopulation)))
+				{
+					oldOwner = owner;
+					oldProvince = province;
+				}
 			}
 		}
 		if (oldOwner == NULL)
