@@ -428,3 +428,5 @@ Revision	Version Updated		Log Message
 493		C++			Don't choke when reading countries.txt
 494		C++			Handle HOD inventions
 495		C++			Dominions instead of colonies
+496		C++			Colonies in HoD
+497		C++			No need to start before 1836
